# dora-openarm-data-collection-ui

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
dev/: README.md
example/: dataflow_dummy.yaml  metadata.yaml
src/dora_openarm_data_collection_ui/: __init__.py  main.py
src/dora_openarm_data_collection_ui/templates/: root.html
